org.metaborg.lang.tiger.example/tests/binding/binding06.tig
(for x := 1 to 10 do
  print(chr(x));
x) // error: not in scope